# modbus-can-crc

./: .gitignore  Cargo.toml  README.md  build-windows.sh  build.sh
src/: cli.rs  gui.rs  lib.rs
